--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ public
 tmp
 server/todos-merb/log
 log
-server/sproutcore-demo/simplejson-2.5/build/lib.macosx-10.5-i386-2.5/simplejson/scanner.pyc
+server/sproutcore-demo/simplejson-2.5/build
 
 
